# demovid

./: Cargo.toml  Makefile  PLAN.md  README.md  agent-native-cli-learnings.md
src/: config.rs  ffmpeg.rs  main.rs
src/commands/: assemble.rs  concat_audio.rs  frames.rs  init.rs  mod.rs  probe.rs  render_clip.rs  schema.rs  silence.rs  tts.rs
templates/: AGENTS.md  CLAUDE.md  project.yaml
