[package]
name = "demovid"
version = "0.1.0"
edition = "2021"
description = "Standalone demo video production tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
is-terminal = "0.4"
libc = "0.2"
kokoro-micro = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
